--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,6 @@ jobs:
          echo $JAVA_HOME
       - run: ./mvnw install
       - uses: codecov/codecov-action@v1
+      - name: Codecov
+      uses: codecov/codecov-action@v2.1.0
 
